--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,14 +23,14 @@ ff = "0.13"
 group = "0.13"
 pairing_lib = { version = "0.23.0", package = "pairing" }
 
-bls12_381 = { version = "0.8.0", optional = true, features = ["experimental", "zeroize"] }
+bls12_381 = { version = "0.8.0", optional = true, features = ["experimental" ] }
 sha2 = { version = "0.9", optional = true }
 hkdf = { version = "0.11.0", optional = true }
 
 blst_lib = { version = "0.3.10", optional = true, package = "blst" }
 blstrs = { version = "0.7.0", optional = true }
 
-zeroize = { version = "1.7", features = ["derive"] }
+zeroize = { version = "1.7", optional = true, features = ["derive"] }
 
 [features]
 default = ["pairing", "multicore"]
@@ -38,6 +38,8 @@ multicore = ["rayon"]
 pairing = [ "bls12_381", "sha2", "hkdf" ]
 blst = [ "blst_lib", "blstrs" ]
 blst-portable = [ "blst_lib", "blst_lib/portable", "blstrs/portable" ]
+
+zeroize = ["dep:zeroize", "bls12_381/zeroize"]
 
 [dev-dependencies]
 rand = "0.8"
